# hse-nlp-hw-2-fork

./: .gitignore  pyproject.toml
hw/: hw2.ipynb  utils.py
hw/dataset/: README.md  litbank.py
